@@ -1,6 +1,8 @@
 v3.7.1-rc.1 (XXXX-XX-XX)
 ------------------------
 
+* Fixed non-deterministic test failure in Pregel WCC test.
+
 * Fixed unintentional connection re-use for cluster-internal communications.
 
 * Fixed problem with newer replication protocol and ArangoSearch which could
